# prv_candidates_step

./: .gitignore  README.md  pyproject.toml  schema.avsc
.github/workflows/: tests.yaml
prv_detection_step/: step.py
prv_detection_step/core/candidates/: process_prv_candidates.py
prv_detection_step/core/processor/: processor.py
prv_detection_step/core/strategy/: base_strategy.py  ztf_strategy.py
tests/integration/: conftest.py  test_step.py
tests/unit/: test_parsers.py
