[tool.poetry]
name = "prv_candidates_step"
version = "1.0.0"
description = "PRV Candidates Step"
authors = []
readme = "README.md"
packages = [{include = "prv_candidates_step"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
apf-base = "2.4.2"
confluent_kafka = "2.0.2"
survey-parser-plugins = {git = "https://github.com/alercebroker/survey-parser-plugins", rev = "2.3.7"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-docker = "^1.0.1"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-x --cov prv_candidates_step --cov-report xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"